src/objects/Person_Note__c.object
<CustomObject>
    <description>Subset of notes from SMS, used to id students or authorised significant others</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Person Notes</relationshipLabel>
        <relationshipName>Person_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Expires__c</fullName>
        <description>Date of expiry of note.  Once expired date arrives, note will not show in console UI sidebar</description>
        <inlineHelpText>Date of expiry of note.  Once expired date arrives, note will not show in console UI sidebar</inlineHelpText>
        <label>Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Important__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if checked, then this will drive the console component to set notes notification button to red with white text</description>
        <inlineHelpText>if checked, then this will drive the console component to set notes notification button to red with white text</inlineHelpText>
        <label>Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedCustom__c</fullName>
        <description>require a custom datetime stamp for use on console remoting WHERE clause - known limitation of remoting SOQL</description>
        <formula>LastModifiedDate</formula>
        <label>LastModifiedCustom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Care_Reason__c</fullName>
        <label>Special Care Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Problem Behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreasonable Complainant Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welfare Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Style_Text__c</fullName>
        <description>additional requirement for css per note type, so if added to this field, css will be injected into row of person note in UI.</description>
        <label>Style Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Special_Care_Reason__c</controllingField>
            <picklistValues>
                <fullName>SPECIAL CARE</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Person Note</label>
    <nameField>
        <label>Person Note Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>